--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "file-type": "^14.1.4",
     "jsonfile": "^5.0.0",
+    "moment": "^2.30.1",
     "multer": "^1.4.2",
     "uuid": "^3.4.0"
   },
